feat: modify check api (#7)
feat: modify check api
